D0280/exercise-rbac-ecommerce/manifests/01-namespaces.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: ecommerce-prod
---
apiVersion: v1
kind: Namespace
metadata:
  name: ecommerce-dev
