D0280/exercise-rbac-ecommerce/manifests/04-services.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: frontend
  namespace: ecommerce-prod
spec:
  selector:
    app: frontend
  ports:
  - port: 80
    targetPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: backend
  namespace: ecommerce-prod
spec:
  selector:
    app: backend
  ports:
  - port: 8080
    targetPort: 8080
